echo_v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo2
spec:
  selector:
    matchLabels:
      app: echo1
  replicas: 2
  template:
    metadata:
      labels:
        app: echo1
        version: v2
    spec:
      containers:
      - name: echo1
        image: hashicorp/http-echo
        args:
        - "-text=App V2"
        ports:
        - containerPort: 5678
