dest_rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: echo1-destination
spec:
  host: echo1
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
