istio-header-ab.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echo1
spec:
  hosts:
  - echo.m1g.pp.ua
  gateways:
  - echo1-gateway
  http:
  - match:
    - headers:
        user:
          exact: marcus
    route:
    - destination:
        host: echo1
        subset: v2
      port:
        number: 80
  - route:
    - destination:
        host: echo1
        subset: v1
      port:
        number: 80
