istio-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echo1
  namespace: echo
spec:
  hosts:
  - echo.m1g.pp.ua
  gateways:
  - echo1-gateway
  http:
    - route:
      - destination:
          host: echo1
        port:
          number: 80
